v0.2.1
Closes #2